name:                haskell-cron-matcher
version:             0.1.0.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pattern, Field, Constraint, Helper
  build-depends:       base >= 4.7 && < 5
                     , dates == 0.2.2.2
  default-language:    Haskell2010

executable haskell-cron-matcher-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , dates == 0.2.2.2
                     , haskell-cron-matcher
  default-language:    Haskell2010

test-suite haskell-cron-matcher-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       PatternSpec, FieldSpec, ConstraintSpec, HelperSpec
  build-depends:       base
                     , dates == 0.2.2.2
                     , hspec
                     , QuickCheck
                     , haskell-cron-matcher
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/anwinged/haskell-cron-matcher
